Added array of questions and answers

--- a/quiz-code.html
+++ b/quiz-code.html
@@ -17,9 +17,9 @@
         <div id="questions">Questions</div>
         <div id="answers-container">
           <button id="option">Answer 1</button><br>
-          <!-- <button id="option">Answer 2</button><br>
+          <button id="option">Answer 2</button><br>
           <button id="option">Answer 3</button><br>
-          <button id="option">Answer 4</button><br> -->
+          <button id="option">Answer 4</button><br>
         </div>
       </div>
 
