Edited html,css, and js

--- a/quiz-code.html
+++ b/quiz-code.html
@@ -7,24 +7,22 @@
     <title>Code Quiz</title>
   </head>
   <body>
-    <div class="score">Score</div>
-    <div class="timer">Timer</div>
-
     <div class="container">
-        <div id="welcome">Welcome to Quiz Code</div>
-        
-      <div id="container-box" class="hide">
-        <div id="questions">Questions</div>
-        <div id="answers-container">
-          <button id="option">Answer 1</button><br>
-          <button id="option">Answer 2</button><br>
-          <button id="option">Answer 3</button><br>
-          <button id="option">Answer 4</button><br>
-        </div>
+      <div id="question">Welcome To Quiz Code</div>
+
+      <div id="container-answers" class="hide">
+        <button class="answer-btn">Answer 1</button><br />
+
+        <button class="answer-btn">Answer 2</button><br />
+
+        <button class="answer-btn">Answer 3</button><br />
+
+        <button class="answer-btn">Answer 4</button><br />
       </div>
 
-      <div id="buttons">
+      <div id="container-buttons">
         <button id="start-btn">Start</button>
+
         <button id="next-btn" class="hide">Next</button>
       </div>
     </div>
