Added timer, and question functions

--- a/quiz-code.html
+++ b/quiz-code.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Code Quiz</title>
+
+    <link rel="stylesheet" href="style.css" />
+
+    <title>Document</title>
   </head>
+
   <body>
-    <div class="container">
-      <div id="question">Welcome To Quiz Code</div>
+    <div class="timer"></div>
 
-      <div id="container-answers" class="hide">
-        <button class="answer-btn">Answer 1</button><br />
+    <main id="container"></main>
 
-        <button class="answer-btn">Answer 2</button><br />
+    <div id="container-buttons">
+      <button id="start-btn">Start</button>
 
-        <button class="answer-btn">Answer 3</button><br />
-
-        <button class="answer-btn">Answer 4</button><br />
-      </div>
-
-      <div id="container-buttons">
-        <button id="start-btn">Start</button>
-
-        <button id="next-btn" class="hide">Next</button>
-      </div>
+      <button id="next-btn" class="hide">Next</button>
     </div>
 
     <script src="script.js"></script>
