--- a/quiz-code.html
+++ b/quiz-code.html
@@ -19,7 +19,7 @@
     <div id="container-buttons">
       <button id="start-btn">Start</button>
 
-      <button id="next-btn" class="hide">Next</button>
+      <!-- <button id="next-btn" class="hide">Next</button> -->
     </div>
 
     <script src="script.js"></script>
