--- a/quiz-code.html
+++ b/quiz-code.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Document</title>
+    <title>Quiz Code</title>
   </head>
 
   <body>
@@ -34,18 +34,19 @@
         placeholder="Type your initials here"
       />
 
-      <!-- <div id="lastUser"></div> -->
-
       <div>
         <div class="save-div"></div>
         <button id="save" placeholder="save">Save</button>
       </div>
 
-      <!-- <div class="lastRegistered"></div> -->
       <h2>Last User Score</h2>
       <ul>
         <li id="lastUserScore"></li>
       </ul>
+
+      <div>
+        <button id="play-again">Play Again</button>
+      </div>
     </div>
 
     <script src="script.js"></script>
