--- a/quiz-code.html
+++ b/quiz-code.html
@@ -14,17 +14,17 @@
   <body>
     <div class="container">
       <div class="timer"></div>
-      <div class="correctAnswer"></div>
-      <div class="wrongAnswer"></div>
 
       <main id="quizContainer"></main>
+
+      <div id="alert-msg"></div>
     </div>
 
     <div class="startBtn-container">
       <button id="start-btn">Start</button>
     </div>
 
-    <!-- --------- Render Last User Container Code -------- -->
+    <!-- --------- Render-Last-User Container Code -------- -->
     <div id="lastUser-Container" class="hide">
       <h1 id="yourScore">Your Score</h1>
       <input
@@ -41,8 +41,8 @@
 
       <h2>Last User Score</h2>
 
-      <ul>
-        <li id="lastUserScore"></li>
+      <ul id="lastUserScore">
+        
       </ul>
 
       <div>
